grey overflow fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,6 +37,9 @@ th:first-child{
         .p-dialog .p-dialog-header {
             border-bottom: 0.5px solid #e6e5e5;
         }
+        .p-datatable-scrollable-header{
+            background-color: transparent;
+        }
   
   }  
 }
